@@ -1,3 +1,8 @@
+2009-11-04  Michal Ludvig  <mludvig@logix.net.nz>
+
+	* buspirate.c: Implemented 'BinMode' support for
+	  firmware 2.7 and higher.
+
 2009-11-03  Michal Ludvig  <mludvig@logix.net.nz>
 
 	* arduino.c: Add on to bug #26703 / patch #6866 - clear DTR/RTS
